Fix css in sign confirmation modal, for weird aspect-ratio documents on small screens

--- a/frontend/app/less/signview/sign.less
+++ b/frontend/app/less/signview/sign.less
@@ -84,7 +84,7 @@
     height: 100%;
     float: right;
     left: 47%;
-    width: 70%;
+    width: auto;
 
     div {
       float: left;
